--- a/privacy.html
+++ b/privacy.html
@@ -69,10 +69,11 @@
     <section class="contact-info">
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-        <p><strong>Email:</strong> <a href="mailto:remoteairtyping@gmail.com">remoteairtyping@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:remoteairtypeapp@gmail.com">remoteairtypeapp@gmail.com</a></p>
     </section>
 
     <a href="index.html" class="back-link">← Back to Home</a>
 
 </body>
+
 </html>
