--- a/terms.html
+++ b/terms.html
@@ -60,10 +60,11 @@
     <section class="contact-info">
         <h2>Contact Us</h2>
         <p>If you have any questions or concerns regarding these Terms, please reach out to us:</p>
-        <p><strong>Email:</strong> <a href="mailto:remoteairtyping@gmail.com">remoteairtyping@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:remoteairtypeapp@gmail.com">remoteairtypeapp@gmail.com</a></p>
     </section>
 
     <a href="index.html" class="back-link">← Back to Home</a>
 
 </body>
+
 </html>
