--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="googlee521dd383685cfe2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Type - Home</title>
     <style>
@@ -70,4 +71,5 @@
     </footer>
 
 </body>
+
 </html>
