--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <footer>
         <p>
             <a href="privacy.html">Privacy Policy</a> | 
-            <a href="terms.html">Terms of Service</a>
+            <a href="terms.html">Terms of Service</a> |
+            <a href="refund.html">Rufund Policy</a> |
+            <a href="contact.html">Contact Us</a>
         </p>
         <p>&copy; 2026 Air Type. All rights reserved.</p>
     </footer>
@@ -73,5 +75,6 @@
 </body>
 
 </html>
+
 
 
